--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,13 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Debug DockerHub username
-      run: echo "Username is ${{ secrets.DOCKER_USERNAME }}"
+      
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
 
 
     - name: Build Docker image
